# SG4GdsScene

./: CMakeLists.txt  graphicspolygonitem.cpp  graphicspolygonitem.h  graphicspolygonitem_p.h  graphicsscene.cpp  graphicsscene.h  graphicsscene_p.h  graphicsview.cpp  graphicsview.h  graphicsworker.cpp  graphicsworker.h  layoutmodel.cpp  layoutmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc
